--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -38,7 +38,7 @@ import {Cards, Card} from '@/components/card'
     rounded={false}
   />
   <Card
-    title="Andres Lorange (1847-1888)"
+    title="Anders Lorange (1847-1888)"
     description="Museets første konservator og arkeolog" 
     image="/images/menneskene/AndersLorange_red.jpg" 
     imageAlt="Portrett av Andres Lorange" 
