--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -29,7 +29,7 @@ Det første sporet finner vi i reiseskildringene til museets grunnlegger Wilhelm
 da gården Myklebust. I hans antikvariske notat kan vi lese; (…) *ere adskillige Gravhøje af Sand og Gruus, nogle meget store og runde, andre flade og aflange, de allerfleste 
 undersøgte* (…).
 
-I de neste 200 årene, skjer det flere arkeologiske undersøkelser på gården. Vi kan lese om de spektakulære funnene museets første arkeolog Andres Lorange gjorde under sin 
+I de neste 200 årene, skjer det flere arkeologiske undersøkelser på gården. Vi kan lese om de spektakulære funnene museets første arkeolog Anders Lorange gjorde under sin 
 utgravning i 1874. Vi kan lese rapporter, publikasjoner, analyser, se tegninger og foto fra viktige undersøkelser museets første professor i arkeologi Haakon Shetelig 
 utførte på begynnelsen av 1900-tallet. Og, vi finner informasjon om nyere undersøkelser av museets arkeologer, som gjenåpning av Myklebusthaugen i oktober 2024. 
 Da det ble funnet en 150 år gammel hemmelighet, om vitenskap og kjærlighet! 
@@ -82,7 +82,7 @@ i vårt museumsdistrikt.
     image="/images/arkeologi/Brevet i flaskeposten.jpg" 
     imageAlt="En håndskrevet papirlapp funnet i flaskepost fra 1874 "
   >
-    I 2024 finner arkeologene en flaskepost i Myklebusthaugen. Posten var en 150 år gammel hilsen fra arkeolog Andres Lorange (Foto: Adnan Icagic, Universitetsmuseet i Bergen)
+    I 2024 finner arkeologene en flaskepost i Myklebusthaugen. Posten var en 150 år gammel hilsen fra arkeolog Anders Lorange (Foto: Adnan Icagic, Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
  <ImageCarousel.Item 
     image="/images/arkeologi/Myklebusthaugen_2024.JPG" 
@@ -98,7 +98,7 @@ i vårt museumsdistrikt.
     description="På Unimusportalen kan du finne alle de arkeologiske gjenstandene vi har i samlingene. (Gullgubbe. Foto: Adnan Icagic, Universitetsmuseet i Bergen)" 
     image="/images/arkeologi/B5392_gullgubbe_red.jpg" 
     imageAlt="Liten firkantet brikke i gull med to skikkelser trykt på platen" 
-    href="https://www.unimus.no/portal/#/things/fa8a886f-d634-442a-9d07-54f508ba8165" 
+    href="https://www.unimus.no/portal/#/search/things?requirePhoto=false&collectionType=Arkeologi&museum=UM&limit=100" 
   />
   <Card 
     title="Topografisk arkiv!" 
@@ -131,7 +131,7 @@ i vårt museumsdistrikt.
   />
   <Card 
     title="Å bevare for evigheten!" 
-    description="Hvordan bevarer museet sine samlinger i et evighetsperspektiv? Her kan du se en video som forklarer litt av prosessen.
+    description="Hvordan bevarer museet sine samlinger i et evighetsperspektiv? Her kan du se en video, laget av Åshild Sunde Feyling Thorsen,  som forklarer litt av prosessen.
     (Funn fra Skipshelleren. Foto: Ann-Mari Olsen, Universitetsmuseet i Bergen) " 
     image="/images/arkeologi/pilspiss_skipshelleren.jpg" 
     imageAlt="Foto av flere spydspisser og fiskekroker laget av bein" 
@@ -146,13 +146,13 @@ i vårt museumsdistrikt.
   />
   <Card 
     title="Den yngre Jernalders Sværd: et Bidrag til Vikingtidens Historie og Teknologi" 
-    description="Les Haakon Sheteligs rapport fra 1902. (Spenne (B5764m). Foto: Adnan Icagic, Universitetsmuseet i Bergen) " 
+    description="Les Haakon Shetelig sin publikasjon om gravene på Myklebust. (Spenne (B5764m). Foto: Adnan Icagic, Universitetsmuseet i Bergen) " 
     image="/images/arkeologi/B5764m_Spenne_1902.jpg" 
     imageAlt="En oval spenne i bronse, med ornamentikk" 
     href="https://urn.nb.no/URN:NBN:no-nb_digibok_2016011907543" 
     />
   <Card 
-    title="Hvem var Andres Lorange?" 
+    title="Hvem var Anders Lorange?" 
     description="Les mer om museets første arkeolog og konservator. (Foto: Marcus Selmer, Universitetsbiblioteket i Bergen)" 
     image="/images/arkeologi/AndersLorange_red.jpg" 
     imageAlt="Svart hvitt bilde, mann med skjegg og dress" 
