--- a/content/tema/glass/octavia-sperati.mdx
+++ b/content/tema/glass/octavia-sperati.mdx
@@ -16,7 +16,7 @@ Octavia Sperati (1847-1918) var en norsk skuespiller, som tilbrakte det meste at
 Den 25. oktober 1901 mottok hun dette epergne i gave fra O.B Sundt. Et epergne er et slags serveringsstativ, ofte brukt som et midtpunkt på spisebordet. 
 Gjenstanden ble donert til Teatermuseet, hvor samling i dag er en del av Universitetsmuseet i Bergen.
 
-I våre databaser kan finner man flere gjenstander både fra Teatersamlingen og Octavia Sperati!
+I våre databaser finner man flere gjenstander, både fra Teatersamlingen og Octavia Sperati!
 
 <ImageCarousel className="feature">
   <ImageCarousel.Item
@@ -30,28 +30,28 @@ I våre databaser kan finner man flere gjenstander både fra Teatersamlingen og 
     image="/images/glass/BTM_178_Ovtavia_sko.jpg" 
     imageAlt="Blå, gul, brune broderte sko med litt hæl"
   >
-    Disse skoene ble brukt av Sperati i teaterstykke "Den stundesløse" (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
+    Disse skoene ble brukt av Sperati i teaterstykke "Den Stundesløse" (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/glass/BTM7001a_Kostyme_Octavia.jpg" 
     imageAlt="Gråblå jakke med blomstermønster i gulfarge"
   >
-    Denne jakken ble brukt av Sperati i teaterstykke "Den stundesløse" (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
+    Denne jakken ble brukt av Sperati i teaterstykke "Den Stundesløse" (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/glass/BTM333_Poesibok_Octavia.jpg" 
     imageAlt="Svart liten bok i skinn, med Sperati sine inisialer"
   >
-    Dette er en poesibok som har tilhørt Octavia Sperati (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
+    Poesibok, som har tilhørt Octavia Sperati (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/glass/BTM144_Sminkeboks_Octavia.jpg" 
     imageAlt="En brun treboks, brukt til oppbevaring av sminke"
   >
-    Octavia Sperati sin sminkeskrin (BTM144) på teateret (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
+    Octavia Sperati sitt sminkeskrin (BTM144) på teateret (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
