--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -24,21 +24,21 @@ import { JumpToStories } from '@/components/jump-to-stories'
 </Hero>
 
 <ContentGrid>
-Kirkekunsten har vært viktig for museet helt siden opprettelsen i 1825. Allerede i invitasjonen om å opprette et museum definerte museets grunnlegger Wilhelm Frimann Koren Christie hvilke 
+Kirkekunsten har vært viktig for museet helt siden opprettelsen i 1825. Allerede i invitasjonen om å opprette et museum definerte museets grunnlegger Christie hvilke 
 gjenstandskategorier han ønsket å samle inn til sitt nye museum. En av kategoriene var *Levninger af den catholske Cultus*, eller kirkekunst fra middelalderen. Christie 
 fikk også med seg biskop i Bergen Jacob Neumann inn i Direksjonen (museets styre) og samarbeide dem imellom førte til at museet i dag har en enestående samling av kirkekunst.
 
 <JumpToStories title="kirkekunst" />
 
 Innsamlingen bestod i stor grad av kirkekunst fra middelalderen og det er den samlingen som er mest kjent i dag. Men museet har også en flott samling av kirkekunst fra 
-etter-reformatorisk tid (1536). 
+etter-reformatorisk tid (år 1536). 
 
 Den første gjenstanden som blir beskrevet i Bergens Museums katalog over *Kirkelige Gjenstande yngre end Reformationen*, er altertavlen fra Ørskog kirke (NK1). 
-I katalogen kan vi lese en detaljert beskrivelse av altertavlen, som også forteller om de bibelske motivene. Nederst på tavlen finner vi motiv fra nattverden, og videre 
-oppover korsfestelsen og på toppen av tavlen oppstandelsen.
+I katalogen kan vi lese en detaljert beskrivelse av altertavlen, som også forteller om de bibelske motivene. Nederst på tavlen finner vi motiv fra nattverden, i midten 
+korsfestelsen og på toppen av tavlen oppstandelsen.
 
 Grunnen til at altertavlen endte på museum er interessant. Da det nye kirkebygget ble innviet i Ørskog i 1874 hadde kirken en del inventar man ikke ønsket å benytte i den 
-nye kirken.  Vi kan lese i "Bergens Adresse-Contoirs Efterretninger" den 19.jaunar 1885 at; *Bergens Stiftsdirection anmodet Ørskogs Formandskab om at afstaa til Museet en 
+nye kirken.  Vi kan lese i "Bergens Adresse-Contoirs Efterretninger" den 19.januar 1885 at; *Bergens Stiftsdirection anmodet Ørskogs Formandskab om at afstaa til Museet en 
 gammel Altertavle*. I møteboken til Ørskog formannskap finner vi et vedtak den 3. januar 1885 om å gi altertavlen i gave til Bergens Museum.
 
 Siden den gang har altertavlen vært en sentral del av museets samlinger, sist sett i Kirkekunstutstillingen, som nå kan oppleves digitalt.
@@ -66,7 +66,7 @@ Siden den gang har altertavlen vært en sentral del av museets samlinger, sist s
     image="/images/kirkekunst/AV_Innbydelsen.jpg" 
     imageAlt="Forsiden av innbydelsen museets grunnlegger Christie sendte ut. Trykket med gotiske bokstaver (Kilde: Statsarkivet i Bergen, Arkivverket)"
   >
-    Innbydelsen om å opprette et museum sendt ut av W.F.K. Christie sendte ut april 1825 
+    Innbydelsen om å opprette et museum sendt ut av W.F.K. Christie sendte ut april 1825. (Kilde: Arkivverket) 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/kirkekunst/ubb-kk-1318-3082x_xl.jpg" 
@@ -86,7 +86,7 @@ Siden den gang har altertavlen vært en sentral del av museets samlinger, sist s
   />
   <Card 
     title="Middelalderens kirkekunst" 
-    description="Få innblikk i museets kirkekunstsamling fra Middelalder. (Kalk,MA187a. Foto: Mette Bing Espedal, Universitetsmuseet i Bergen)" 
+    description="Få innblikk i museets kirkekunstsamling fra Middelalder. (KalkM(A187a). Foto: Mette Bing Espedal, Universitetsmuseet i Bergen)" 
     image="/images/kirkekunst/Kalk_Ma187a_red.jpg" 
     imageAlt="En liten kalk i gull" 
     href="https://kirkekunst.w.uib.no/" 
@@ -114,7 +114,7 @@ Siden den gang har altertavlen vært en sentral del av museets samlinger, sist s
   />
   <Card 
     title="Stavkirkeportalene fra Stedje" 
-    description="Museet har flere portaler fra stavkirker i sin samling, en av disse er fra Stedje. (Foto: Olav Espevoll, Universitetsmuseet i Bergen)" 
+    description="Museet har flere portaler fra stavkirker i sin samling, en av disse er fra Stedje. Les mer her. (Foto: Olav Espevoll, Universitetsmuseet i Bergen)" 
     image="/images/kirkekunst/Stavkirkeportal_Stedje.jpg" 
     imageAlt="" 
     href="https://tohundrefortellinger.w.uib.no/1867/06/20/1866/" 
