--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -66,7 +66,7 @@ hvor de ble kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har
     image="/images/verden-i-bergen/E2292_Kvinnelue.jpg" 
     imageAlt="Grønn lue, med røde og blå bånd.."
   > 
-    Samisk kvinnelue med trehorn (E2292) (Foto: Universitetsmuseet i Bergen). 
+    Samisk kvinnelue (E2292) (Foto: Universitetsmuseet i Bergen). 
   </ImageCarousel.Item>
   
   <ImageCarousel.Item
@@ -82,7 +82,7 @@ hvor de ble kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har
   <Card 
     title="Samisk samling" 
     description="I denne nettutstillingen kan du lære mer om Universitetsmuseet i Bergen sin samling av samisk kulturarv. 
-    Hva finnes i samlingen, hvordan skal museet etisk forvalte denne kulturarven? (Kofte (E8289). Foto: Universitetsmuseet i Bergen)"
+    Hva finnes i samlingen? Å hvordan skal museet etisk forvalte denne kulturarven? (Kofte (E8289). Foto: Universitetsmuseet i Bergen)"
     image="/images/verden-i-bergen/E8289_kofte.jpg" 
     imageAlt="Samisk kofte i blått med gule, røde og grønne bånd, rundt halsen, ermene" 
     href="https://samisksamling.w.uib.no/" 
@@ -103,7 +103,7 @@ hvor de ble kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har
   />
     <Card 
     title="Admiral Bruni D’Entrecasteauxs samling fra Stillehavet" 
-    description="Les mer om samlingen fra Stillehavet som Christie kjøpte av Ankerfamilien. (Vifte fra Indonesia (E42). Foto: Universitetsmuseet i Bergen)" 
+    description="Les mer om samlingen fra Stillehavet, som Christie kjøpte av Ankerfamilien. (Vifte fra Indonesia (E42). Foto: Universitetsmuseet i Bergen)" 
     image="/images/verden-i-bergen/vifte-E42-43.jpg" 
     imageAlt="Vifte laget av strå" 
     href="https://tohundrefortellinger.w.uib.no/1970/09/18/1970-wayang-dukketeater-fra-java/" 
