--- a/content/samlinger-pa-flyttefot.mdx
+++ b/content/samlinger-pa-flyttefot.mdx
@@ -61,7 +61,7 @@ og prosjekt "Sikre samlinger".
     href="https://tohundrefortellinger.w.uib.no/2014/09/14/2013-dyr-pa-luftetur-utflytting-fra-naturhistorisk/" 
   />
    <Card 
-    title="Prosjketet FLYTT" 
+    title="Prosjektet FLYTT" 
     description="Les mer om prosjektet "FLYTT", som er en del av prosjektet &quot;Sikre Samlinger&quot;" 
     image="/images/en-institusjon-blir-til/X11069_olbolle.jpg" 
     imageAlt="Foto av en ølbolle i tre med brun grunnfargen og grønt mønster" 
