Fix description formatting in FLYTT project card for consistency

--- a/content/samlinger-pa-flyttefot.mdx
+++ b/content/samlinger-pa-flyttefot.mdx
@@ -62,7 +62,7 @@ og prosjekt "Sikre samlinger".
   />
    <Card 
     title="Prosjektet FLYTT" 
-    description="Les mer om prosjektet "FLYTT", som er en del av prosjektet &quot;Sikre Samlinger&quot;" 
+    description="Les mer om prosjektet &quot;FLYTT&quot;, som er en del av prosjektet &quot;Sikre Samlinger&quot;" 
     image="/images/en-institusjon-blir-til/X11069_olbolle.jpg" 
     imageAlt="Foto av en ølbolle i tre med brun grunnfargen og grønt mønster" 
     href="https://www.uib.no/samlingsforvaltning/149521/flytt-24" 
