--- a/content/index.mdx
+++ b/content/index.mdx
@@ -12,7 +12,13 @@ import { Button } from '@/components/ui/button'
 <div className="text-xl text-center py-20 md:py-42">
   <h2 className="text-xl md:text-2xl text-center">— En digital jubileumsutstilling —</h2>
 
-  Denne nettutstillingen feirer 200 år med forskning, bevaring og formidling av kulturarv ved Universitetsmuseet i Bergen. Gjennom digitale IIIF-manifester kan du utforske våre samlinger og lære mer om museets historie og betydning.
+  Samlingene av arkivmateriale ved Universitetsbiblioteket og Universitetsmuseet i Bergen dokumenterer og formidler 200 år med vidunderlig vitenskap ved Bergens Museum og UiB.
+
+Målet med samarbeidsprosjektet mellom biblioteket og museet i jubileumsåret 2025 er å skape en digital portal som gjør samlingene lettere tilgjengelige. Den digitale portalen gir en felles inngang til mangfoldet av arkivmateriale – institusjonens hukommelse – samtidig som den serverer smakebiter fra arkivene.
+
+Samlingene synliggjør både den vitenskapelige utviklingen ved institusjonen, i tillegg til å dekke et bredt spekter av kulturhistorisk og lokalhistorisk materiale. Samlet sett er arkivmaterialet vår felles kulturarv og en ressurs for forskere, studenter, skoleelever og alle interesserte.
+
+Portalen vil kontinuerlig utvides og utvikles med mer materiale.
 </div>
 
 <NavCards title="Tematiske fortellinger" />
