--- a/content/tema/hverdag/index.mdx
+++ b/content/tema/hverdag/index.mdx
@@ -41,6 +41,22 @@ Kanskje vi også skal tenke på hvordan vår hverdag blir dokumentert for fremti
     imageAlt="Klesvask" 
     href="https://marcus.uib.no/search/?q=klesvask&filter=type.exact%23Fotografi&filter=subject.exact%23Klesvask&size=20" 
   />
+
+ <Card title="«Annerledeshverdag»" 
+    description="En hverdag under spesielle omstendigheter." 
+    image="/nav-card-images/ubb-bs-ok-18198_th.jpg" 
+    imageAlt="Klesvask" 
+    href="/tema/hverdag/annerledeshverdag" 
+  />
+
+   <Card title="Klesvask" 
+    description="Alle steder - til alle tider. Utforsk samlingene med emneord-søk." 
+    image="/nav-card-images/ubb-bs-ok-18198_th.jpg" 
+    imageAlt="Klesvask" 
+    href="/tema/fisk/thorholv-rasmussen" 
+  />
+
+
 </Cards>
 
 </ContentGrid>
