--- a/content/tema/hverdag/index.mdx
+++ b/content/tema/hverdag/index.mdx
@@ -35,27 +35,34 @@ Kanskje vi også skal tenke på hvordan vår hverdag blir dokumentert for fremti
 
 
 <Cards id="historier" title="Historier om hverdag" className="full pt-10 md:pt-20">
-  <Card title="Klesvask" 
-    description="Alle steder - til alle tider! Utforsk samlingene med et emneord-søk." 
-    image="/nav-card-images/ubb-bs-ok-18198_th.jpg" 
-    imageAlt="Klesvask" 
-    href="https://marcus.uib.no/search/?q=klesvask&filter=type.exact%23Fotografi&filter=subject.exact%23Klesvask&size=20" 
-  />
-
+  
  <Card title="«Annerledeshverdag»" 
     description="En hverdag under spesielle omstendigheter." 
-    image="/nav-card-images/ubb-bs-ok-18198_th.jpg" 
-    imageAlt="Klesvask" 
+    image="/nav-card-images/ubb-ms-1611-71-01_p0001_th-icon.jpg" 
+    imageAlt="Illegal avis" 
     href="/tema/hverdag/annerledeshverdag" 
   />
 
    <Card title="Skillingsviser" 
     description="Populærkultur for allmuen." 
-    image="/nav-card-images/ubb-bs-ok-18198_th.jpg" 
-    imageAlt="Klesvask" 
-    href="/tema/fisk/thorholv-rasmussen" 
+    image="/nav-card-images/ubb-ekst-k-box-084-43_p0003_th-icon.jpg" 
+    imageAlt="Skillingsvise" 
+    href="/tema/hverdag/skillingsviser" 
   />
 
+<Card title="Gult!" 
+    description="Guldguult. Svovlguult. Citronguult." 
+    image="/nav-card-images/ubb-spesmag-0018a-icon.jpg" 
+    imageAlt="Utsnitt av bok om tøyfarging" 
+    href="/tema/hverdag/farging-av-toey" 
+  />
+
+<Card title="Klesvask" 
+    description="Alle steder - til alle tider! Utforsk samlingene med et emneord-søk." 
+    image="/nav-card-images/ubb-bs-ok-18198_th.jpg" 
+    imageAlt="Klesvask" 
+    href="https://marcus.uib.no/search/?q=klesvask&filter=type.exact%23Fotografi&filter=subject.exact%23Klesvask&size=20" 
+  />
 
 </Cards>
 
