cards tid og rom

--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -43,23 +43,23 @@ Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor con
 <Card 
     title="Mellom sol og måne" 
     description="Tidevannet i samlingene." 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
+    image="/nav-card-images/ubb-ms-0380_p0088-icon.jpg" 
+    imageAlt="Tegning av seilskute" 
     href="/tema/tid-og-rom/mellom-sol-og-maane" 
   />
   <Card 
     title="Året som ble kortere" 
-    description="Les om Christie og de «mærkelige Fiske» i museet" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
-    href="/tema/tid-og-rom/christie-og-de-maerkelige-fiske" 
+    description="1894 – året som ble 39 minutter kortere i Bergen" 
+    image="/nav-card-images/ubb-librar-f-0109-03-utsnitt-a-icon.jpg" 
+    imageAlt="Tegning av gammel klokke" 
+    href="/tema/tid-og-rom/kortere-aar" 
   />
   <Card 
     title="Almanakken" 
-    description="Les om Christie og de «mærkelige Fiske» i museet" 
+    description="Mye mer enn en kalender!" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
-    href="/tema/tid-og-rom/christie-og-de-maerkelige-fiske" 
+    href="/tema/tid-og-rom/almanakk" 
   />
  <Card 
     title="Scholeusstikket" 
