--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -57,8 +57,8 @@ Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor con
   <Card 
     title="Almanakken" 
     description="Mye mer enn en kalender!" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
+    image="/nav-card-images/ubb-romertall-oktav-viii-1783-icon.jpg" 
+    imageAlt="Almanakk" 
     href="/tema/tid-og-rom/almanakk" 
   />
  <Card 
