--- a/content/tema/tid-og-rom/almanakk.mdx
+++ b/content/tema/tid-og-rom/almanakk.mdx
@@ -16,9 +16,25 @@ keywords:
 
 Bergen fikk en kortvarig glede i 1814 med en egen almanakk som var regnet ut etter Bergens polhøyde, trykket av Jacob Lehmann i Oslo.
 
+<Figure mode="portrait" image="/images/tid-og-rom/ubb-romertall-oktav-viii-1814.jpg" alt="Almanakk fra 1814" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Almanakk beregnet for Bergen, 1814. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 Dette var den første lovlig trykte almanakken i Norge, selvsagt parallelt med en 1814-utgave beregnet for Oslo og en for Trondheim, slik det tidligere var blitt trykket i København. Som sedvanlig for almanakken begynte faktaopplysningene også i 1814-utgaven for Bergen på forsiden, som fortalte at det var to år siden forrige skuddår. Blar vi om får vi vite at det var 5781 år siden verdens skapelse, og 46 år siden Kong Christian Frederik ble født. Utgivelsen begynner med en beklagelse som vitner om det spente forholdet mellom Norge og Danmark: «Vanskeligheden i Samfærselen med Danmark har og hindret Tilførsel af de for Norge fornødne Almanakker. Til Afhjælpning af dette Savn har Hans Høihed Statholderen naadigst befalet nærværende Almanak at udgives. Af Mangel paa de sædvanlige Almanak-Tegn, hvilke savnes ved alle i Norge værende Bogtrykkerier, ere Himmel-tegnene blevne nævne med Abbreviatur». Derfor mangler denne utgaven de sjarmerende små symbolene som ble erstattet med bokstavforkortelser. Utover årets merkedager, inneholder også denne utgaven en karakteristisk informativ tekst som har til hensikt å opplyse allmenheten. For å utnytte papiret maksimalt begynner teksten nederst på siden, «Om Jordblanding», og fortsetter gjennom hele almanakken med beskrivelse av den ideelle dyrkingsjorden, og dens sammensetning av kalk, leire og sand mm.
 
 Før de norske utgavene ble vedtatt trykket var det forbudt og gebyrbelagt å utgi almanakker i Norge, og en eventuell bot skulle tilfalle det runde astronomiske tårn i København, Rundetårn, som vi ser avbildet på almanakken for 1783 trykket i samme by. Siste del av denne avsluttes med en femsides tekst om den danske opphevelse av jordfelleskapet, og slik gir almanakken oss også et viktig innblikk i politiske avgjørelser og det praktiske utfallet det fikk for innbyggerne. Dette var kort sagt et svært omfattende jordskifte, som delte fellesjord som lå mellom byer, og som gav den enkelte råderett over egen jord. Almanakken bidrar med en komprimert oppsummering av fordelene ved dette, i tillegg til en sammenfatning av godt åkerbruk, med instruks om at jorden må hvile og dreneres for å kunne yte gode avlinger. Tipsene til hvordan man kan vekseldyrke og dele opp jorden i ulike områder fordelt til ulike avlinger, vitner om den vitenskapelige tilnærmingen for å unngå å utarme jorden, formidlet på en ukomplisert og lett tilgjengelig måte.
+
+<Figure mode="portrait" image="/images/tid-og-rom/ubb-romertall-oktav-viii-1783.jpg" alt="Almanakk fra 1783" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Almanakk for København, 1783. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 I samlingene finner vi også to svenske almanakker, med like nyttige artikler, men med vidt ulike tema. Stockholms almanakk for 1822 inneholder en tekst om omsorg og stell av barn i dets første leveår. «Till Lunds Horizont» i 1829 ble det skrevet om tuberkulose hos hester - «lungrötan hos häst-kreaturen».
 
@@ -27,28 +43,14 @@ Informasjonsarbeidet i almanakken blir med årene mer og mer omfattende, og det 
 Almanakken av 1783 skrevet for Københavns polhøyde avslutter med disse ordene:
 «I øvrigt behager man, som forrige Aar blev erindret, at gjemme sin Almanak, da man hvert Aar kan vente noget Nyt.»
 
-
-{/*
-<Figure image="/images/fisk/ubb-ms-0311-a-002.jpg" alt="Tegning av ålekvabbe omgitt av håndskrevet tekst. " width={2000} height={1000}>
+<Figure size="feature" image="/images/tid-og-rom/ubb-romertall-oktav-viii-1822.jpg" alt="Almanakk fra 1822" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
-      Ålekvabbe, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.
+      Mange almanakker inneholdt også ambisiøst nok langtidsvarsel for været. Her ser vi i en almanakk for Stockholm fra 1822 værmeldingen for september, med understrykning to av dagene, "regn" og "klart", kan hende det var disse dagene værmeldingen stemte? Universitetsbiblioteket i Bergen.
     </Figure.Description>
   </Figure.Content>
 </Figure>
-*/}
 
+*En variant av denne teksten er tidligere publisert i På Høyden, 24.02.2023.*
 
-{/*
-<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-ms-0380?as=iiif">
-  <Work.Content>
-    <Work.Description>
-      Ms 380 Navigasjonsbok. Formler og vakre tegninger. Universitetsbiblioteket i Bergen.
-    </Work.Description>
-    <Work.Link href="https://marcus.uib.no/instance/manuscript/ubb-ms-0380.html">
-      Se detaljene i Marcus
-    </Work.Link>
-  </Work.Content>
-</Work>
-*/}
 </ContentGrid>
