--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -25,21 +25,22 @@ import { JumpToStories } from '@/components/jump-to-stories'
 
 <ContentGrid>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Under stjernene, over åpne hav - fra tidlige tider har menneskene orientert seg etter himmellegemer og landemerker. Samlingene våre viser oss tidlige verktøy, metoder og forseggjorte nedtegninger av kunnskapen om verden. Slik som landmåling, navigasjon og målinger av tid og avstand, alt dette var med på å danne grunnlaget for handel, transport og kommunikasjon.
 
+{/*
 <JumpToStories title="tid-og-rom" />
-
-Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor consequat ut vix. Vivendum intellegat et qui, ei denique consequuntur vix. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Scripta periculis ei eam, te pro movet reformidans. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Et mazim recteque nam. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te.
+*/}
 
 
 <Cards id="historier" title="Historier om tid og rom" className="full pt-10 md:pt-20">
   <Card 
     title="Solur" 
     description="Tiden fanges i bøker og på kirkevegger" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    image="/nav-card-images/Bf_X_14776_01-icon.jpg" 
     imageAlt="Solur" 
     href="/tema/tid-og-rom/solur" 
   />
+
 <Card 
     title="Mellom sol og måne" 
     description="Tidevannet i samlingene." 
