--- a/content/tema/tid-og-rom/kortere-aar.mdx
+++ b/content/tema/tid-og-rom/kortere-aar.mdx
@@ -15,7 +15,13 @@ keywords:
 
 Ved sommersolverv den 21. juni står jordens nordlige halvkule nærmest solen og vi får årets lengste dag. Med det i tankene er det rart å tenke på at det ikke er mer enn ca 400 år siden rettsaken i 1633 hvor Galileo Galilei be anklaget for sitt heliosentriske verdensbilde. Det passet seg bedre om man opprettholdt troen på at jorden ikke var i bevegelse, og enda bedre, at alt kretset rundt jorden.
 
-bilde 1
+<Figure mode="portrait" image="/images/tid-og-rom/ubb-librar-f-0109-03-utsnitt-a.jpg" alt="Tegning av gammel klokke" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Plansje over urverk fra Manuskript- og librarsamlingens «Recueil de Planches, sur les Sciences, les Arts Liberaux, et les Arts Mechaniques, avec leur Explication.”, bind 3. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Nå er det 130 år siden det ble vedtatt at Norge skulle innføre normaltid i hele landet. (Log um sams normaltid fyr kongeriket Norig var forøvrig den første loven på nynorsk!) Inntil 1. januar 1895 ble klokkene i Norge stilt etter solens stråler, og hver by hadde sin lokale soltid. Med utviklingen av en velfungerende infrastruktur fortonet dette seg noe upraktisk, og det ble innført jernbanetid i Norge. I Sverige kjørte jernbanen etter Gøteborgtid, men i Norge eksisterte flere jernbanetider, alt etter hvilke byer man reiste mellom. Så å reise med jernbanen tidligere var på mange måter en reise i tid. For ikke å glemme telegraftiden som ytterligere kompliserte det hele...
 
@@ -27,6 +33,14 @@ Slik havnet Norge i tidssonen 15 lengdegrader østenfor Greenwich, og det utgjø
 
 Nyttårsaften 1894 var også normaltiden en kilde til forvirring, når skulle man feire overgangen til et nytt år? Svaret var at uret skulle stilles når klokken ble midnatt ved den 15. meridianen. Altså når klokken var 11 i Greenwich. Dette resulterte i at 1894 var året som ble 39 minutter kortere i Bergen. 1895 derimot var året da det første døgnet i Vardø varte i 25 timer og 4 minutter, og hvor nyttår kunne feires to ganger.
 I 1892 hadde de innført samme nasjonale klokkeslett i Belgia også, men her valgte de utrolig nok å stanse klokken i 17 minutt før den ble startet opp igjen. Geelmuyden skriver fornøyelig også om en mulig problemstilling som kunne oppstå hvis man hadde valgt samme utenkelige fremgangsmåte i Norge: Hva om to personer dør forskjellige steder i Vardø imens tiden står stille, hvor den ene etterlater seg arv, og den andre er arving, da vil man fått problemer ved å avklare spørsmålet om arv siden man også har problemer med å avklare hvem som gikk bort først.
+
+<Figure mode="portrait" image="/images/tid-og-rom/ubb-librar-f-0109-03-utsnitt-b.jpg" alt="Tegning av gammel klokke" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Plansje over urverk fra Manuskript- og librarsamlingens «Recueil de Planches, sur les Sciences, les Arts Liberaux, et les Arts Mechaniques, avec leur Explication.”, bind 3. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 
 *En variant av denne teksten er tidligere publisert i Khrono, 21.06.2019.*
