--- a/content/tema/tid-og-rom/solur.mdx
+++ b/content/tema/tid-og-rom/solur.mdx
@@ -10,10 +10,6 @@ keywords:
 
 <ContentGrid className="mt-10">
 
-{/*
-![Fisk tegnet av Stuwitz](/images/fisk/ubb-ms-0311-a-001.jpg)
-*Skjellbrosme, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.*
-*/}
 
 # Solur
 
@@ -21,13 +17,27 @@ En brun og lite bemerkelsesverdig bok står med ryggen ut og vitner lite om det 
 
 Med forsiktig hånd tas boken ut av hyllen, og det første som kommer for en dag innenfor permen er det håndlagde forsatspapiret marmorert i duse farger. Boken er førsteutgaven av “Regle Horaire Universelle: pour tracer des Cadrans Solaires sur toutes sortes de Plans Reguliers, Déclinans & Inclinez.” skrevet av ingeniør Haye og utgitt i Paris i 1716. Innholdet består i en utførlig teknisk beskrivelse av hvordan man lager et solur, nemlig gnomonikk. Allerede rundt 1750 figurerer førsteutgaven i katalogene til den kjente bokselgeren Tomas Osborne.
 
-BILDE FRA BOKEN
+
+<Figure mode="portrait" image="/images/tid-og-rom/ubb-spesmag-0429-utsnitt-b.jpg" alt="Solur som en sfære" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Solur formen som en sfære, med dekorativ fot. Regle Horaire Universelle, Haye, 1716. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Det er meget sannsynlig at Haye er den samme Thomas Haye som laget instrumenter slik som kompass, portable solur, kombinerte portable kompass og solur, sistnevnte også som et sett med oppmålingsutstyr. Han virket i Paris på slutten av 1600-tallet og begynnelsen av 1700-tallet i en bransje kontrollert av laugene. De detaljrike instrumentene, og illustrasjonen øverst viser tydelige likheter i utformingen.
 
 Et solur kan ta mange former, men hovedprinsippet er som kjent at når solens stråler beveger seg over himmelen beveger en skygge eller et lys seg over en flate med ferdig opptegnede linjer eller punkt som indikerer tid på døgnet. Stangen i midten, eller trekanten, kalles en gnomon, hvor den etymologiske betydningen av gno- er “å vite”. Stangen eller trekantens ene side står parallelt med jordens akse, selvsagt i sin enkleste form, for solur kan både være halvkuleformede, sylinderformede eller tilpasset ekvator. Lommesolurene måtte også tilpasses omgivelsene ved bruk.
 
-BILDE AV LOMMESOLUR FRA MUSEET
+
+<Figure size="feature" image="/images/tid-og-rom/Bf_X_14776_01.jpg" alt="Lommesolur" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Foto av lomme-solur, med et lite kompass. Foto: Stine Dornfest. Universitetsmuseet i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Flere kirker hadde også et solur, gjerne et vertikalmontert eller -innrisset på kirkeveggen. Et slikt eksempel finner vi på Mosterøy i Rogaland, på Utstein klosters kirke. To urskiver, også kalt horologium, var risset inn oppå hverandre på ytterveggen av korportalen, hvor den eldste fulgte soltiden og den yngste ble risset inn etter et klokkeverk. At munkene så tidlig hadde et klokkeverk viser hvordan Utstein kloster sto i en tradisjon fra kontinentet hvor de tidlige urmakerne var munker. Etter en omfattende renovering rundt 1900 ble steinen med soluret plassert for lavt, og dermed ble soluret dessverre feilkalibrert.Flere kirker hadde også et solur, gjerne et vertikalmontert eller -innrisset på kirkeveggen. Et slikt eksempel finner vi på Mosterøy i Rogaland, på Utstein klosters kirke. To urskiver, også kalt horologium, var risset inn oppå hverandre på ytterveggen av korportalen, hvor den eldste fulgte soltiden og den yngste ble risset inn etter et klokkeverk. At munkene så tidlig hadde et klokkeverk viser hvordan Utstein kloster sto i en tradisjon fra kontinentet hvor de tidlige urmakerne var munker. Etter en omfattende <a href="https://www.nb.no/items/URN:NBN:no-nb_digibok_2007032901022">renovering</a> rundt 1900 ble steinen med soluret plassert for lavt, og dermed ble soluret dessverre feilkalibrert.
 
@@ -54,7 +64,13 @@ Ser man nærmere på Universitetsmuseets akvarell over “Udsteens Kloster” ma
 
 Med Hayes tekniske tegninger, som nærmest danner estetiske ornamenter, kan man ta solurets kompleksitet nærmere i øyesyn i Spesialsamlingens “Regle Horaire Universelle”.
 
-BILDER FRA BOKEN
+<Figure size="feature" image="/images/tid-og-rom/ubb-spesmag-0429-utsnitt-f.jpg" alt="Teknisk tegning av solur" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Urskiver med gnomon og kompass presentert i en estetisk symmetri. Regle Horaire Universelle, Haye, 1716. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 
 *En variant av teksten er tidligere publisert i Khrono, 10.05.2019.
