sol og måne bilde

--- a/content/tema/tid-og-rom/mellom-sol-og-maane.mdx
+++ b/content/tema/tid-og-rom/mellom-sol-og-maane.mdx
@@ -20,7 +20,13 @@ Tidevannets bølgende kraft er en av de tingene i livet man ikke kan gjøre noe 
 
 Bergens egen navigasjonsmester, Jørgen Kieding, forfattet rundt 1750 en vidunderlig håndskrevet navigasjonsbok som bevares hos Spesialsamlingene. Over hele seks sider beskrives formler og regelsett til bruk ved beregning av «Høyt og Lavt Vands Tid». Blant de sirlige innførslene og den metodiske tilnærmingen finner vi, til stor glede, detaljerte tegninger som viser et annet talent hos Kieding.
 
-utsnitt av MS 380
+<Figure size="feature" image="/images/tid-og-rom/ubb-ms-0380-utsnitt-a.jpg" alt="Utsnitt fra håndskrevet navigasjonsbok" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Mellom sol og måne. Utsnitt fra den håndskrevne navigasjonsboken Ms 380. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Det iboende behovet for å dekorere og uttrykke seg visuelt er tydelig når man studerer de små skutene hvor ingen taljer eller rep er utelatt, og hvor tidevannstabellen sammensatt med kompassrosen er dekorert og fargesatt i en harmonisk palett. Ikke minst ser man den kunstneriske og lekne streken i formlene som regner ut påvirkningen solen og månen har på tidevannet, hvor han i stedet for å skrive sol og måne tegnet og kolorerte symbolet for himmellegemene som nå lyser opp en heller skrifttett side i manuskriptet.
 
@@ -44,30 +50,20 @@ Når Bergen igjen opplever at havet stiger under stormflo er det som alltid like
 
 Springflo forekommer regelmessig gjennom året når både månen og solen sammen trekker på vannet. Men, det økte antallet stormfloder, som påvirkes av vindtrykk mot havoverflaten og lavtrykk, kan man i større grad knytte til klimaforandringene. Med andre ord, noe man må forholde seg til, og må gjøre noe med.
 
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-kk-n-356-063?as=iiif">
+  <Work.Content>
+    <Work.Description>
+      Flom på Bryggen, 1931. Fotograf: Atelier KK. Universitetsbiblioteket i Bergen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/photograph/ubb-kk-n-356-063.html">
+      Se bildet i Marcus
+    </Work.Link>
+  </Work.Content>
+</Work>
+
+
 
 *En variant av teksten er tidligere publisert i Khrono, 14.02.2020.*
 
 
-{/*
-![Fisk tegnet av Stuwitz](/images/fisk/ubb-ms-0311-a-001.jpg)
-*Skjellbrosme, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.*
-*/}
-
-{/*
-<Work iiifContent="https://api.ub.uib.no/items/ubb-ms-0380?as=iiif">
-  <Work.Content>
-    <Work.Description>
-      Ms 380 Navigasjonsbok. Formler og vakre tegninger. Universitetsbiblioteket i Bergen.
-    </Work.Description>
-    <Work.Link href="https://marcus.uib.no/instance/manuscript/ubb-ms-0380.html">
-      Se detaljene i Marcus
-    </Work.Link>
-  </Work.Content>
-</Work>
-*/}
-
-
-{/*
-<a href="http://marcus.uib.no/topic/29c9e0dd-9fce-4a48-9abe-9946b5b1f35c">bildene</a>
-*/}
 </ContentGrid>
